# veil

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
benchmarks/: README.md
benchmarks/exploits/: README.md
benchmarks/exploits/2016-governmental/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2016-king-of-the-ether/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2016-the-dao/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2017-parity-multisig-v1/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2017-parity-multisig-v2/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2017-smartbillions/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2018-bec-token/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2020-bzx/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2020-harvest/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2021-poly-network/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2022-beanstalk/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2022-nomad/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2022-wormhole/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/2023-euler/: POSTMORTEM.md  contract.sol  expected.json
benchmarks/exploits/results/: extras.md  misses.md  summary.json  summary.md
benchmarks/perf/: README.md
benchmarks/perf/results/: summary.json
benchmarks/precision/: README.md  corpus.toml
benchmarks/precision/results/: summary.json  summary.md
benchmarks/precision/results/aave-v3-core/: findings.json  triage.md
benchmarks/precision/results/balancer-v2-vault/: findings.json  triage.md
benchmarks/precision/results/compound-v3-comet/: findings.json  triage.md
benchmarks/precision/results/lido-core/: findings.json  triage.md
benchmarks/precision/results/makerdao-dss/: findings.json  triage.md
benchmarks/precision/results/openzeppelin-contracts/: findings.json  triage.md
benchmarks/precision/results/uniswap-v3-core/: findings.json  triage.md
benchmarks/precision/results/uniswap-v3-periphery/: findings.json  triage.md
benchmarks/recall/: README.md  corpus.toml  labels.yml
benchmarks/recall/results/: extras.md  misses.md  summary.json  summary.md
benchmarks/recall/swc/: LICENSE-SWC-REGISTRY  README.md
benchmarks/recall/swc/SWC-104-unchecked-call/: SOURCE.md  king.sol
benchmarks/recall/swc/SWC-106-selfdestruct/: SOURCE.md  mortal.sol
benchmarks/recall/swc/SWC-107-reentrancy/: SOURCE.md  simple_dao.sol
benchmarks/recall/swc/SWC-112-delegatecall/: SOURCE.md  proxy.sol
benchmarks/recall/swc/SWC-115-tx-origin/: SOURCE.md  tx_origin.sol
benchmarks/recall/swc/SWC-116-timestamp/: SOURCE.md  roulette.sol
benchmarks/recall/swc/SWC-120-weak-randomness/: SOURCE.md  guess.sol
benchmarks/recall/swc/SWC-128-dos-gas-limit/: SOURCE.md  distribute.sol
benchmarks/scripts/: fetch-corpora.ps1  fetch-corpora.sh
core/: Cargo.toml
core/benches/: scan_bench.rs
core/src/: ast_utils.rs  cfg.rs  detector_trait.rs  helpers.rs  lib.rs  main.rs  output.rs  report.rs  scan.rs  suppression.rs  taint.rs  types.rs
core/src/contracts/: PRODUCTION-CONTRACTS.md  README.md  cfg_false_positive_regression.sol  cfg_true_positive.sol  comprehensive-vulnerabilities.sol  cross-chain-bridge.sol  defi-yield-aggregator.sol  false-positive-edge-cases.sol  governance-timelock.sol  modern-liquidity-pool.sol  modern-staking-vault.sol  new-detectors-test.sol  nft-staking-rewards.sol  production-erc20-staking.sol  production-governance-token.sol  production-staking-vault.sol  production-token-vesting.sol  production-yield-aggregator.sol  rewards-distributor.sol  test-patterns.sol
core/src/detectors/: README.md  access_control.rs  delegatecall.rs  dos_loops.rs  flash_loan.rs  front_running.rs  integer_overflow.rs  mod.rs  reentrancy.rs  storage_collision.rs  timestamp.rs  tx_origin.rs  unchecked_calls.rs  unchecked_erc20.rs  unsafe_random.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/cmd/: exploits.rs  fetch.rs  perf.rs  precision.rs  recall.rs  standards.rs  triage.rs
