[package]
name = "veil"
version = "0.1.0"
edition = "2021"
authors = ["Sharif Parish"]
description = "Placeholder for the Veil project"
license = "MIT"
repository = "https://github.com/saintparish4/veil"
homepage = "Placeholder for the Veil project"
documentation = "Placeholder for the Veil project"
keywords = ["Placeholder for the Veil project"]
categories = ["Placeholder for the Veil project"]
readme = "Placeholder for the Veil project"

[lib]
name = "veil"
path = "core/src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "veil"
path = "core/src/main.rs"
required-features = ["cli"]

[[bin]]
name = "codegen"
path = "core/src/bin/codegen.rs"
required-features = ["codegen"]

[features]
default = ["cli"]
cli = ["dep:colored", "dep:clap", "dep:tracing-subscriber"]
codegen = ["dep:ts-rs"]

[dependencies]
tree-sitter = "0.26.5"
tree-sitter-solidity = "1.2.13"
tree-sitter-language = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
smallvec = "1.15.1"
tracing = "0.1.44"
sha2 = "0.11.0"
colored = { version = "3.1.1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
ts-rs = { version = "12.0.1", optional = true, features = ["serde-compat"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.4.0"
tempfile = "3"
