[workspace]
resolver = "2"
members = ["core", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sharif Parish"]
license = "MIT"
repository = "https://github.com/saintparish4/veil"

# Shared dependency versions. Member crates pull them in via `.workspace = true`.
[workspace.dependencies]
# Core deps (used by `veil` and re-used by `xtask`).
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
tracing = "0.1.44"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.86"
toml = "1.1.2+spec-1.1.0"
globset = "0.4.18" 

# Core-only deps (kept here so all versions live in one file).
tree-sitter = "0.26.5"
tree-sitter-solidity = "1.2.13"
tree-sitter-language = "0.1.7"
smallvec = "1.15.1"
sha2 = "0.11.0"
colored = "3.1.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

# Dev deps shared across members.
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.4.0"
tempfile = "3"
