[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Veil benchmarking & release automation runner (invoked via `cargo xtask`)."
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# Re-uses the library crate directly (same entry points as the CLI).
veil = { path = "../core", default-features = false }
toml = { workspace = true }
globset = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
